classDiagram
%% ========== DOMÆNE-ENTITETER ==========
class Bus {
    +BusId: string
    +Model: BusModel
    +BatteriKapacitetKWh: double
    +BatteriNiveauProcent: double
    +ForbrugKWhPrKm: double
    +Status: BusStatus
    +BeregnResterendeDriftTid(gennemsnitsHastighedKmh: double): TimeSpan
}
 
%% ========== ENUMERATIONER ==========
class BusModel {
<<enumeration>>
    MBeCitaro
    YutongE12
    BYDK9
    Volvo7900E
}
 
class BusStatus {
<<enumeration>>
    PåRute          %% (Inroute)
    Afløser         %% (Intercept)
    Returnerer
    Oplader
    Garage
}
 
%% ========== RELATIONER ==========
Bus --> BusModel
Bus --> BusStatus
